fixed issue with the blog svg that caused it to render funny on ie

--- a/src/sass/nav.scss
+++ b/src/sass/nav.scss
@@ -27,6 +27,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+  max-width: 1920px;
   h1 {
     margin: 0;
     font-size: 20px;
@@ -41,7 +43,6 @@ header {
   height: 100%;
   width: 100%;
   z-index: 999;
-
   ul {
     font-family: '04b_03', monospace;
     list-style: none;
