--- a/src/sass/svg.scss
+++ b/src/sass/svg.scss
@@ -31,7 +31,4 @@
   .path-hover {
     fill: white;
   }
-  #Blog {
-    transform: scale(0.045) translate(200px, -78px);
-  }
 }
